<resources>
    <string name="app_name">Activity 8a</string>
    <string name="application_for_employment">Application For Employment</string>
    <string name="position_you_are_applying_for">Position You Are Applying For:</string>
    <string name="date_available_for_work">Date Available for Work:</string>
    <string name="desired_salary">Desired Salary:</string>
    <string name="personal_information">Personal Information</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="first_name">First Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="home_phone">Home Phone</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="social_security_number">Social Security Number</string>
    <string name="ss">SS-</string>
    <string name="are_you_a_us_citizen">Are you a US Citizen?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="convicted_of_felony">Convicted of Felony?</string>
    <string name="if_selected_for_employment_are_you_willing_to_submit_to_a_pre_employment_drug_screening_test">If selected for employment, are you willing to submit to a pre-employment drug screening test?</string>
    <string name="education">Education</string>
    <string name="school_name">School Name</string>
    <string name="location">Location</string>
    <string name="years_attended">Years Attended</string>
    <string name="degree_received">Degree Received</string>
    <string name="major">Major</string>
    <string name="degree">Degree</string>
    <string name="other_training_certifications_or_licenses_held">Other training, certifications or licenses held:</string>
    <string name="employment">Employment</string>
    <string name="employer">Employer</string>
    <string name="dates_employed">Dates Employed</string>
    <string name="work_phone">Work Phone</string>
    <string name="pay_rate">Pay rate</string>
    <string name="pay_Rate">Pay Rate</string>
    <string name="supervisors_name_and_title">Supervisors Name and Title</string>
    <string name="reason_for_leaving">Reason for Leaving</string>
    <string name="may_we_contact_them">May we contact them?</string>
    <string name="references">References</string>
    <string name="name">NAME</string>
    <string name="title">TITLE</string>
    <string name="company">COMPANY</string>
    <string name="phone">PHONE</string>
    <string name="acknowledgement_and_authorization">Acknowledgement and Authorization</string>
    <string name="i_certify_that_all_the_answers_given_herein_are_true_and_complete_to_the_best_of_my_knowledge">I certify that all the answers given herein are true and complete to the best of my knowledge.</string>
    <string name="i_authorize_investigation_of_all_statements_contained_in_this_application_for_employment_as_may_be_necessary_in_arriving_at_an_employment_decision">I authorize investigation of all statements contained in this application for employment as may be necessary in arriving at an employment decision.</string>
    <string name="in_the_event_of_employment_i_understand_that_false_or_misleading_information_given_in_my_application_or_interview_s_may_result_in_discharge">In the event of employment, I understand that false or misleading information given in my application or interview(s) may result in discharge.</string>
    <string name="signature_of_applicant">Signature of Applicant</string>
    <string name="date">Date</string>
</resources>